buildscript {
    repositories {
        jcenter()
        maven { url "https://plugins.gradle.org/m2/" }
    }
    dependencies {
        classpath 'org.eclipse.jgit:org.eclipse.jgit:5.0.1.201806211838-r'
        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7'
        classpath 'com.adarshr:gradle-test-logger-plugin:1.6.0'
        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.3'
    }
}

group 'com.radix.stress'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'com.github.johnrengelman.shadow'

mainClassName = "com.radix.regression.TokenCreation"

sourceCompatibility = 1.8
mainClassName = 'com.radix.regression.TokenCreation'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    //implementation 'com.radixdlt:radixdlt-java:develop-SNAPSHOT'
    compile project(":radixdlt-java")
    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.14'
    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
    compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
    testCompile group: 'info.cukes', name: 'cucumber-java', version: '1.2.5'
    testCompile group: 'info.cukes', name: 'cucumber-junit', version: '1.2.5'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
